# gang-garrison-rs

./: Cargo.toml  README.md  flake.nix  server_conf.ini  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: README.md
assets/builtin/: pack.toml
assets/builtin-rs/: pack.toml
assets/builtin-rs/assets/gg2/atlases/: game.toml
assets/builtin-rs/assets/gg2/sprites/: player.toml
assets/builtin-rs/assets/gg2/sprites/character/: scout.toml
gg2-bevy-client/: Cargo.toml
gg2-bevy-client/src/: config.rs  game.rs  map.rs  networking.rs  physics.rs  player.rs
gg2-bevy-client/src/config/: io.rs
gg2-bevy-client/src/networking/: message.rs  socket.rs  state.rs
gg2-bevy-client/src/networking/message/: client.rs  server.rs
gg2-bevy-client/src/render/: camera.rs  gui.rs
gg2-bevy-client/src/render/gui/: cursor.rs  input.rs  menu.rs
gg2-bevy-client/src/render/gui/menu/: elements.rs
gg2-bevy-common/: Cargo.toml
gg2-bevy-common/src/: game.rs  intel.rs  lib.rs  map.rs  physics.rs  player.rs
gg2-bevy-common/src/damage/: source.rs
gg2-bevy-common/src/map/: collision.rs  io.rs
gg2-bevy-common/src/map/io/: error.rs
gg2-bevy-common/src/networking/: message.rs
gg2-bevy-common/src/player/: character.rs  class.rs  team.rs
gg2-bevy-common/src/player/class/: scout.rs
gg2-client/: Cargo.toml
gg2-client/src/: camera.rs  config.rs  game.rs  gui.rs  lib.rs  main.rs  map.rs  networking.rs  physics.rs  player.rs  render.rs  state.rs
gg2-client/src/config/: io.rs
gg2-client/src/gui/: input.rs  menu.rs
gg2-client/src/gui/menu/: elements.rs
gg2-client/src/networking/: message.rs  socket.rs  state.rs
gg2-client/src/networking/message/: client.rs  server.rs
gg2-client/src/render/: camera.rs  gui.rs
gg2-client/src/render/gui/: cursor.rs  menu.rs
gg2-common/: Cargo.toml
gg2-common/src/: chat.rs  error.rs  game.rs  gamemode.rs  hud.rs  intel.rs  lib.rs  map.rs  networking.rs  physics.rs  player.rs  string.rs
gg2-common/src/chat/: bubble.rs
gg2-common/src/config/: error.rs
gg2-common/src/damage/: source.rs
gg2-common/src/entity/: entities.rs
gg2-common/src/game/: control_point.rs  generator.rs  intel.rs
gg2-common/src/map/: collision.rs  data.rs  entity.rs  io.rs
gg2-common/src/map/collision/: mesh.rs
gg2-common/src/map/entity/: entities.rs
gg2-common/src/map/io/: error.rs
gg2-common/src/networking/: error.rs  message.rs
gg2-common/src/networking/message/: client.rs  server.rs
gg2-common/src/player/: character.rs  class.rs  team.rs
gg2-common/src/player/class/: soldier.rs
gg2-custom-client/: Cargo.toml
gg2-custom-client/src/: asset.rs  camera.rs  config.rs  error.rs  game.rs  init.rs  input.rs  main.rs  map.rs  networking.rs  player.rs  prelude.rs  render.rs  sync.rs  world.rs
gg2-custom-client/src/asset/: atlas.rs  error.rs  identifier.rs  pack.rs  sprite.rs
gg2-custom-client/src/asset/identifier/: serde.rs
gg2-custom-client/src/config/: error.rs  io.rs
gg2-custom-client/src/game/: gamemode.rs
gg2-custom-client/src/init/: cli.rs
gg2-custom-client/src/input/: bind.rs  code.rs  device.rs
gg2-custom-client/src/input/device/: gilrs.rs  winit.rs
gg2-custom-client/src/networking/: io.rs  update.rs
gg2-custom-client/src/render/: camera.rs  gui.rs  instance.rs  pipeline.rs  texture.rs  vertex.rs
gg2-custom-client/src/render/gui/: draw.rs
gg2-custom-client/src/render/shaders/: map.wgsl  screen_texture.wgsl  shader.wgsl  sprite.wgsl
gg2-custom-client/src/render/texture/: atlas.rs
gg2-custom-common/: Cargo.toml
gg2-custom-common/src/: game.rs  lib.rs  player.rs  prelude.rs  resource.rs  transform.rs
gg2-custom-common/src/game/: gamemode.rs  world.rs
gg2-custom-common/src/init/: cli.rs
gg2-custom-common/src/resource/: error.rs  identifier.rs
gg2-custom-common/src/resource/identifier/: serde.rs
string-path/: Cargo.toml
string-path/src/: lib.rs  serde.rs
