[workspace]
resolver = "2"
members = [
    "gg2-client",
    "gg2-common",
    "gg2-custom-client",
    "gg2-custom-common",
    "string-path",
]

[workspace.package]
version = "0.1.0"
authors = [ "ThePinkHacker" ]
license = "GPL-3.0-or-later"
repository = "https://github.thepinkhacker.com/gang-garrison-rs"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
#unsafe_code = "deny"

[workspace.dependencies]
atomic_float = "1.1.0"
bytemuck = "1.23.2"
clap = "4.5.45"
dyn-future = "3.0.4"
enum-iterator = "2.1.0"
env_logger = "0.11.8"
# I don't want to downgrade wgpu
egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = "0.32.0"
gg2-client = { version = "0.1.0", path = "gg2-client" }
gg2-common = { version = "0.1.0", path = "gg2-common" }
gg2-custom-common = { version = "0.1.0", path = "gg2-custom-common" }
glam = "0.30.5"
gilrs = "0.11.0"
hex = "0.4.3"
image = { version = "0.25.6", default-features = false }
image-atlas = "0.4.1"
log = "0.4.27"
num_enum = "0.7.4"
png = "0.17.16"
poll-promise = "0.3.0"
semver = "1.0.26"
serde = "1.0.219"
serde-hjson = "1.1.0"
serde_with = "3.14.0"
string-path = { version = "0.1.0", path = "string-path" }
thiserror = "2.0.14"
tokio = { version = "1.47.1", default-features = false }
toml = "0.9.5"
uuid = "1.18.0"
walkdir = "2.5.0"
wgpu = "25.0.2"
winit = "0.30.12"
