[package]
name = "gg2-bevy-client"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
dashmap = "6.0.1"
gg2-bevy-common = { path = "../gg2-bevy-common" }
gg2-common = { path = "../gg2-common", features = ["bevy"] }
gg2-client = { path = "../gg2-client", features = ["bevy"] }
tokio = { version = "1.39.3", features = ["io-util", "net", "rt", "rt-multi-thread", "sync"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_rapier2d = "0.29.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
bevy_egui = "0.33.0"
enum-iterator = "2.1.0"

[dependencies.bevy]
version = "0.15.3"
features = ["x11", "bevy_core_pipeline", "multi_threaded", "bevy_state", "bevy_sprite", "wayland", "png", "serialize", "bevy_window", "custom_cursor"]
default-features = false
