[package]
name = "gg2-client"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
dashmap = "6.0.1"
gg2-common = { path = "../gg2-common" }
tokio = { version = "1.39.3", features = ["io-util", "net", "rt", "rt-multi-thread", "sync"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[dependencies.bevy]
version = "0.14.1"
features = ["x11", "bevy_core_pipeline", "multi_threaded", "bevy_state", "bevy_sprite", "wayland", "png"]
default-features = false
