[package]
name = "gg2-common"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
enum-iterator = "2.1.0"
glam = "0.30.3"
hex = "0.4.3"
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"
uuid = "1.10.0"
