[package]
name = "gg2-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
enum-iterator.workspace = true
glam.workspace = true
hex.workspace = true
num_enum.workspace = true
png.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde-hjson.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
serde = ["dep:serde"]
