[package]
name = "gg2-custom-client"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
env_logger = "0.11.8"
gg2-common = { version = "0.1.0", path = "../gg2-common" }
gg2-client = { path = "../gg2-client" }
glam = { version = "0.29.3", default-features = false, features = ["bytemuck"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
pollster = "0.4.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
wgpu = "25.0.0"
winit = { version = "0.30.9", features = ["serde"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
async-lock = "3.4.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
