[package]
name = "gg2-custom-client"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
env_logger = "0.11.8"
gg2-common = { version = "0.1.0", path = "../gg2-common", features = ["serde"] }
gg2-client = { path = "../gg2-client" }
glam = { version = "0.30.3", features = ["bytemuck", "fast-math"] }
log = { version = "*", features = ["max_level_trace", "release_max_level_warn"] }
pollster = "0.4.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
wgpu = "25.0.0"
winit = { version = "0.30.9", features = ["serde"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
async-lock = "3.4.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.22", features = ["preserve_order"] }
gg2-custom-common = { version = "0.1.0", path = "../gg2-custom-common" }
clap = { version = "4.5.37", features = ["derive"] }
image-atlas = "0.4.1"
enum-iterator = "2.1.0"
png = "0.17.16"
serde_with = "3.12.0"
walkdir = "2.5.0"
semver = { version = "1.0.26", features = ["serde"] }
