[package]
name = "gg2-custom-client"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
# I don't want to downgrade wgpu
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
enum-iterator.workspace = true
env_logger.workspace = true
gg2-client.workspace = true
gg2-common = { workspace = true, features = ["serde"] }
gg2-custom-common.workspace = true
glam = { workspace = true, features = ["bytemuck", "fast-math"] }
image = { workspace = true, features = ["png"] }
image-atlas.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_warn"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "rt-multi-thread", "sync", "time"] }
toml = { workspace = true, features = ["preserve_order"] }
walkdir.workspace = true
wgpu.workspace = true
winit = { workspace = true, features = ["serde"] }
