[package]
name = "gg2-custom-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
gg2-common.workspace = true
glam = { workspace = true, features = ["bytemuck"] }
log.workspace = true
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
